<resources>
    <string name="app_name">Proficio</string>
    <string name="login">Авторизация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="click_to_login">Нажмите для авторизации</string>
    <string name="click_to_register">Нажмите для регистрации</string>
    <string name="logout">Выйти</string>
    <string name="current_user">Текущий пользователь</string>
    <string name="lenta">Лента</string>
    <string name="profile">👤</string>
    <string name="exit">↪</string>
    <string name="proficio">Proficio</string>
    <string name="text">Текст</string>
    <string name="header">Название</string>
    <string name="Create">Создать</string>
    <string name="Back">Отмена</string>
    <string name="skills">Навыки</string>
    <string name="number_record">Номер записи</string>
    <string name="Delete">Удалить</string>
</resources>