<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:clipToPadding="false"
    android:clipChildren="false">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#95999999"
        android:weightSum="100">
        <Button
            android:backgroundTint="@color/black"
            android:id="@+id/profileButton"
            android:text="@string/profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"/>
        <TextView
            android:id="@+id/lentaText"
            android:textAlignment="center"
            android:text="@string/lenta"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"/>
        <Button
            android:text="@string/exit"
            android:backgroundTint="@color/black"
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"/>
    </LinearLayout>
    <ListView
        android:id="@+id/listView"
        android:elevation="8dp"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back">

    </ListView>
</RelativeLayout>