<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordCreater"
    android:clipToPadding="false"
    android:clipChildren="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/back"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/headerRecord"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textRecord"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/skillsRecord"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/addButton"
            android:text="@string/Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>
        <Button
            android:id="@+id/backButton"
            android:text="@string/Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"/>
    </LinearLayout>
</RelativeLayout>